# CURSA

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  1 - PROMPT.MD  BASELINE_METRICS.md  CHANGELOG.md  COMMERCIALIZATION_PLAN.md  COMPLETION_PLAN_2026.md  CONTRIBUTING.md  DAY1_COMPLETION_REPORT.md  DEPLOYMENT.md  DEVELOPMENT_PROGRESS.md  DEVELOPMENT_ROADMAP.md  DIAGRAMS.md  DOCUMENTATION_INDEX.md  FINAL_ACHIEVEMENT_REPORT.md  FINAL_SUMMARY.md  FIRST_IMPRESSION_SUMMARY.md  IMPROVEMENTS.md  INDIVIDUALNOE_ZADANIE_OPISANIE.md  LICENSE  NEW_VALIDATORS_SUMMARY.md  OAUTH2_INTEGRATION_GUIDE.md  OAUTH_QUICK_FIX.md  OAUTH_SETUP_GUIDE.md  PERFECTION_PLAN.md  PHASE2_1_EMAIL_NOTIFICATIONS_PLAN.md  PHASE2_COMPLETION_REPORT.md  PHASE2_OAUTH2_COMPLETION.md  POSTGRESQL_MIGRATION.md  PROGRESS_REPORT.md  QUICKSTART_AGENT.md  QUICKSTART_OAUTH.md  QUICKSTART_PERFECTION.md  QUICK_REFERENCE.md  README.md  ROADMAP_BRIEF.md  SESSION_COMPLETION_REPORT.md  SESSION_FINAL_REPORT_2026_03_06.md  (+42 more)
backend/: .dockerignore  Dockerfile  MIGRATION_GUIDE.md  TEST_COVERAGE_PHASE1.md  analyze_remaining_errors.py  init_db.py  init_db_v2.py  pyproject.toml  pytest.ini  quick_api_test.py  quick_validation_test.py  requirements.txt  run.py  run_all_tests.py  run_server.bat  run_unit_tests.bat  test_backend.txt  test_hybrid.py  test_multipass.py  test_payments_output.txt  test_results.txt
backend/app/: __init__.py  check_enum.py  security.py  test_corrector.py  test_import.py
backend/app/api/: api_key_routes.py  auth_routes.py  auth_routes_broken.py  document_routes.py  health_routes.py  oauth_routes.py  payment_routes.py  preview_routes.py  profile_routes.py  swagger_config.py  validation_routes.py
backend/app/config/: __init__.py  alerts.json  config.py  (+3 more)
backend/instance/: cursa.db
backend/profiles/: _______7_0_100-2018.json  ___________________.json  _____________________x.json  ___test.json  bgpu_2023.json  bmstu_requirements.json  default_gost.json  default_gost_copy.json  finuniversity_requirements.json  gost_7_32_2017.json  gost_r_7_0_100_2018.json  hse_requirements.json  itmo_requirements.json  mgu_informatics.json  mgu_requirements.json  mipt_requirements.json  ranepa_requirements.json  spbgu_requirements.json  test_improvement.json
backend/test_data/: hybrid_test_hybrid.docx  hybrid_test_input.docx  hybrid_test_standard.docx  test_multipass_input.docx  test_multipass_output.docx  xml_test_output.docx
backend/tests/: conftest.py  test_auth_service.py  test_payment_service.py  test_validators.py
(+419 files in other folders)
